--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </nav>
     </header>
     <main data-spy="scroll" data-target="#navbar" data-offset="0">
-        <section id="about" style="padding-top: 160px; margin-top: -60px;>
+        <section class="card" id="about" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">About Me</h2>   
             <p>Have experience developing programs using Python, C++, C#, using JavaScript and SQL. Have Language skills in German (C1 Level), French (B1 Level), Irish (H3) and mother-tongue English, as well as customer-facing experience and working as a team as an employee and during projects. IT student with relevant technical and interpersonal skills looking for work placement position. Looking for the opportunity to further develop my skills and to progress through the organisation over time. </p>
             <p>All my socials are linked here and in the Contact Me section</p>
@@ -120,13 +120,13 @@
                 </ul>            
             </ul>
         </section>
-        <section id="experience" style="padding-top: 160px; margin-top: -60px;>
+        <section class="card" id="experience" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Experience</h2>
             <ul>
                 <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
                 <li><strong>Stock Manager</strong>, at Mr.Price January 2024 - Present <br> Managing stock room, stock from Head office and employees as Duty Manager</li>
         </section>
-        <section id="projects" style="padding-top: 160px; margin-top: -60px;>
+        <section class="card" id="projects" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Projects</h2>
             <div id="carouselProjects" class="carousel slide d-flex" data-ride="carousel">
                   <ol class="carousel-indicators">
@@ -155,7 +155,7 @@
                   </a>
             </div>
         </section>
-        <section id="skills" style="padding-top: 160px; margin-top: -60px;>
+        <section class="card" id="skills" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Skills</h2>
             <ul>
                 <li>Teamwork</li>
@@ -168,7 +168,7 @@
                 <li>Data Analysis</li>
             </ul>
         </section>
-        <section id="contactme" style="padding-top: 160px; margin-top: -60px;>
+        <section class="card" id="contactme" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Contact Me</h2>
             <div class="d-flex justify-content-center align-items-center gap-4 social-links">
                 <a href="https://facebook.com" target="_blank">
