--- a/index.html
+++ b/index.html
@@ -157,6 +157,29 @@
         </section>
         <section id="skills" style="padding-top: 160px; margin-top: -60px;>
             <h2 class="section-title">Skills</h2>
+            <div class="container my-5">
+              <h2 class="text-center">My Skills</h2>
+              <div class="row">
+                <div class="col-md-6">
+                  <h4>IT Skills</h4>
+                  <ul class="list-group">
+                    <li class="list-group-item">HTML & CSS</li>
+                    <li class="list-group-item">Operating Systems</li>
+                    <li class="list-group-item">Networking</li>
+                    <li class="list-group-item">Data Analysis</li>
+                  </ul>
+                </div>
+                <div class="col-md-6">
+                  <h4>Interpersonal Skills</h4>
+                  <ul class="list-group">
+                    <li class="list-group-item">Teamwork</li>
+                    <li class="list-group-item">Time Management</li>
+                    <li class="list-group-item">Problem-solving</li>
+                    <li class="list-group-item">Leadership</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
             <ul>
                 <li>Teamwork</li>
                 <li>Time Management</li>
