--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </header>
     <main data-spy="scroll" data-target="#navbar" data-offset="0">
         <section id="about" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">About Me</h2>   
+            <h2 class="section-title mb-4 text-center">About Me</h2>   
             <p>Have experience developing programs using Python, C++, C#, using JavaScript and SQL. Have Language skills in German (C1 Level), French (B1 Level), Irish (H3) and mother-tongue English, as well as customer-facing experience and working as a team as an employee and during projects. IT student with relevant technical and interpersonal skills looking for work placement position. Looking for the opportunity to further develop my skills and to progress through the organisation over time. </p>
             <p>All my socials are linked here and in the Contact Me section</p>
             <div class="d-flex justify-content-center align-items-center gap-4 social-links">
@@ -108,7 +108,7 @@
             </div>
         </section>
         <section id="education" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">Education</h2>
+            <h2 class="section-title mb-4 text-center">Education</h2>
             <ul>
                 <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
                 <li><strong>2nd Level</strong>, Leaving Certificate at St.Kilian's Deutsche Schule Dublin 2019</li>
@@ -121,13 +121,13 @@
             </ul>
         </section>
         <section id="experience" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">Experience</h2>
+            <h2 class="section-title mb-4 text-center">Experience</h2>
             <ul>
                 <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
                 <li><strong>Stock Manager</strong>, at Mr.Price January 2024 - Present <br> Managing stock room, stock from Head office and employees as Duty Manager</li>
         </section>
         <section id="projects" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title mb-4 text-center">Projects</h2>
             <div id="carouselProjects" class="carousel slide d-flex" data-ride="carousel">
                   <ol class="carousel-indicators">
                         <li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
@@ -156,7 +156,6 @@
             </div>
         </section>
         <section id="skills" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">Skills</h2>
             <div class="container my-5">
               <h2 class="mb-4 text-center">My Skills</h2>
             
@@ -257,7 +256,7 @@
             </div>
         </section>
         <section id="contactme" style="padding-top: 160px; margin-top: -60px;>
-            <h2 class="section-title">Contact Me</h2>
+            <h2 class="section-title mb-4 text-center">Contact Me</h2>
             <div class="d-flex justify-content-center align-items-center gap-4 social-links">
                 <a href="https://facebook.com" target="_blank">
                     <image src="facebook-icon.png" alt="Facebook" width="60" height="60">
