--- a/index.html
+++ b/index.html
@@ -109,6 +109,116 @@
         </section>
         <section id="education" style="padding-top: 160px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">Education</h2>
+            <div class="container my-5">
+  <h2 class="mb-4 text-center">My College Degree Timeline</h2>
+
+  <!-- Nav Tabs -->
+  <ul class="nav nav-tabs" id="yearTabs" role="tablist">
+    <!-- Year 4 (active by default) -->
+    <li class="nav-item" role="presentation">
+      <button 
+        class="nav-link active" 
+        id="year4-tab" 
+        data-bs-toggle="tab" 
+        data-bs-target="#year4" 
+        type="button" 
+        role="tab" 
+        aria-controls="year4" 
+        aria-selected="true"
+      >
+        Year 4 (GPA: 3.8)
+      </button>
+    </li>
+    <!-- Year 3 -->
+    <li class="nav-item" role="presentation">
+      <button 
+        class="nav-link" 
+        id="year3-tab" 
+        data-bs-toggle="tab" 
+        data-bs-target="#year3" 
+        type="button" 
+        role="tab" 
+        aria-controls="year3" 
+        aria-selected="false"
+      >
+        Year 3 (GPA: 3.6)
+      </button>
+    </li>
+    <!-- Year 2 -->
+    <li class="nav-item" role="presentation">
+      <button 
+        class="nav-link" 
+        id="year2-tab" 
+        data-bs-toggle="tab" 
+        data-bs-target="#year2" 
+        type="button" 
+        role="tab" 
+        aria-controls="year2" 
+        aria-selected="false"
+      >
+        Year 2 (GPA: 3.5)
+      </button>
+    </li>
+    <!-- Year 1 -->
+    <li class="nav-item" role="presentation">
+      <button 
+        class="nav-link" 
+        id="year1-tab" 
+        data-bs-toggle="tab" 
+        data-bs-target="#year1" 
+        type="button" 
+        role="tab" 
+        aria-controls="year1" 
+        aria-selected="false"
+      >
+        Year 1 (GPA: 3.3)
+      </button>
+    </li>
+  </ul>
+
+  <!-- Tab Content -->
+  <div class="tab-content" id="yearTabsContent" style="margin-top: 20px;">
+    <div class="tab-pane fade show active" id="year4" role="tabpanel" aria-labelledby="year4-tab">
+      <h3>Year 4 Courses and Achievements</h3>
+      <p>
+        - Advanced Data Structures  
+        - Machine Learning  
+        - Capstone Project: "Optimizing Image Recognition Algorithms"
+      </p>
+      <p>GPA: 3.8</p>
+    </div>
+    <div class="tab-pane fade" id="year3" role="tabpanel" aria-labelledby="year3-tab">
+      <h3>Year 3 Courses and Achievements</h3>
+      <p>
+        - Operating Systems  
+        - Algorithms  
+        - Database Management  
+        - Internship at TechCorp
+      </p>
+      <p>GPA: 3.6</p>
+    </div>
+    <div class="tab-pane fade" id="year2" role="tabpanel" aria-labelledby="year2-tab">
+      <h3>Year 2 Courses and Achievements</h3>
+      <p>
+        - Data Structures  
+        - Discrete Mathematics  
+        - Object-Oriented Programming  
+        - Completed a group project on web development
+      </p>
+      <p>GPA: 3.5</p>
+    </div>
+    <div class="tab-pane fade" id="year1" role="tabpanel" aria-labelledby="year1-tab">
+      <h3>Year 1 Courses and Achievements</h3>
+      <p>
+        - Intro to Computer Science  
+        - Calculus I & II  
+        - Basic Programming (Python)  
+        - Participated in Hackathon 101
+      </p>
+      <p>GPA: 3.3</p>
+    </div>
+  </div>
+</div>
             <ul>
                 <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
                 <li><strong>2nd Level</strong>, Leaving Certificate at St.Kilian's Deutsche Schule Dublin 2019</li>
