--- a/index.html
+++ b/index.html
@@ -109,12 +109,19 @@
         </section>
         <section id="education" style="padding-top: 160px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">Education</h2>
+            <ul>
+                <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
+                <li><strong>2nd Level</strong>, Leaving Certificate at St.Kilian's Deutsche Schule Dublin 2019</li>
+                <ul>
+                    <li><strong>Language</strong>, English - Mothertongue</li>
+                    <li><strong>Language</strong>, German - C1 Sprachdiplom</li>
+                    <li><strong>Language</strong>, French - B2 Delf</li>
+                    <li><strong>Language</strong>, Spanish - B1 Language Course Gandia</li>
+                </ul>            
+            </ul>
             <div class="container my-5">
   <h2 class="mb-4 text-center">My College Degree Timeline</h2>
-
-  <!-- Nav Tabs -->
   <ul class="nav nav-tabs" id="yearTabs" role="tablist">
-    <!-- Year 4 (active by default) -->
     <li class="nav-item" role="presentation">
       <button 
         class="nav-link active" 
@@ -126,10 +133,10 @@
         aria-controls="year4" 
         aria-selected="true"
       >
-        Year 4 (GPA: 3.8)
+        Year 4 (GPA: N/A)
       </button>
     </li>
-    <!-- Year 3 -->
+      
     <li class="nav-item" role="presentation">
       <button 
         class="nav-link" 
@@ -141,7 +148,7 @@
         aria-controls="year3" 
         aria-selected="false"
       >
-        Year 3 (GPA: 3.6)
+        Year 3 (GPA: 3.0)
       </button>
     </li>
     <!-- Year 2 -->
@@ -156,7 +163,7 @@
         aria-controls="year2" 
         aria-selected="false"
       >
-        Year 2 (GPA: 3.5)
+        Year 2 (GPA: 3.9)
       </button>
     </li>
     <!-- Year 1 -->
@@ -171,41 +178,42 @@
         aria-controls="year1" 
         aria-selected="false"
       >
-        Year 1 (GPA: 3.3)
+        Year 1 (GPA: 3.9)
       </button>
     </li>
   </ul>
 
-  <!-- Tab Content -->
   <div class="tab-content" id="yearTabsContent" style="margin-top: 20px;">
     <div class="tab-pane fade show active" id="year4" role="tabpanel" aria-labelledby="year4-tab">
       <h3>Year 4 Courses and Achievements</h3>
-      <p>
-        - Advanced Data Structures  
-        - Machine Learning  
-        - Capstone Project: "Optimizing Image Recognition Algorithms"
+      <p>  
+        - Applied Machine Learning
+        - Security in Cloud and IoT
+        - Interactive Media Design
+        - Capstone Project: "CNN to predict cancer from skin lesions"
       </p>
-      <p>GPA: 3.8</p>
+      <p>GPA: N/A</p>
     </div>
     <div class="tab-pane fade" id="year3" role="tabpanel" aria-labelledby="year3-tab">
       <h3>Year 3 Courses and Achievements</h3>
       <p>
         - Operating Systems  
         - Algorithms  
-        - Database Management  
-        - Internship at TechCorp
+        - Database Management
+        - Basic Machine Learning
+        - Year in Spain studying at Universitat Politecnica de Valencia
       </p>
-      <p>GPA: 3.6</p>
+      <p>GPA: 3.0</p>
     </div>
     <div class="tab-pane fade" id="year2" role="tabpanel" aria-labelledby="year2-tab">
       <h3>Year 2 Courses and Achievements</h3>
       <p>
-        - Data Structures  
+        - Data Structures
         - Discrete Mathematics  
         - Object-Oriented Programming  
         - Completed a group project on web development
       </p>
-      <p>GPA: 3.5</p>
+      <p>GPA: 3.9</p>
     </div>
     <div class="tab-pane fade" id="year1" role="tabpanel" aria-labelledby="year1-tab">
       <h3>Year 1 Courses and Achievements</h3>
@@ -215,20 +223,10 @@
         - Basic Programming (Python)  
         - Participated in Hackathon 101
       </p>
-      <p>GPA: 3.3</p>
+      <p>GPA: 3.9</p>
     </div>
   </div>
 </div>
-            <ul>
-                <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
-                <li><strong>2nd Level</strong>, Leaving Certificate at St.Kilian's Deutsche Schule Dublin 2019</li>
-                <ul>
-                    <li><strong>Language</strong>, English - Mothertongue</li>
-                    <li><strong>Language</strong>, German - C1 Sprachdiplom</li>
-                    <li><strong>Language</strong>, French - B2 Delf</li>
-                    <li><strong>Language</strong>, Spanish - B1 Language Course Gandia</li>
-                </ul>            
-            </ul>
         </section>
         <section id="experience" style="padding-top: 160px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">Experience</h2>
