--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="2ndyearprojectimage.png" alt="First slide">
+                      <img class="d-block w-100" src="2ndyearprojectimage.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100" src="hackathonprojectimage.jpg" alt="Second slide">
