--- a/index.html
+++ b/index.html
@@ -283,11 +283,11 @@
                       <img class="d-block w-100" src="4thyearprojectimage.png" alt="Third slide">
                     </div>
                   </div>
-                  <a class="carousel-control-prev" href="#carouselProjects" role="button" data-slide="prev">
+                  <a class="carousel-control-prev" data-bs-target="#carouselProjects" role="button" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                   </a>
-                  <a class="carousel-control-next" href="#carouselProjects" role="button" data-slide="next">
+                  <a class="carousel-control-next" data-bs-target="#carouselProjects" role="button" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                   </a>
