--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </section>
         <section id="projects" style="padding-top: 160px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">Projects</h2>
-            <div id="carouselProjects" class="carousel slide d-flex" data-ride="carousel">
+            <div id="carouselProjects" class="carousel slide d-flex" data-bs-ride="carousel">
                   <ol class="carousel-indicators">
                         <li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselProjects" data-slide-to="1"></li>
