--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
             <h2 class=" mb-4 text-center">Projects</h2>
             <div id="carouselProjects" class="carousel slide d-flex" data-bs-ride="carousel">
                   <ol class="carousel-indicators">
-                        <li data-target="#carouselProjects" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselProjects" data-slide-to="1"></li>
-                        <li data-target="#carouselProjects" data-slide-to="2"></li>
+                        <li data-bs-target="#carouselProjects" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carouselProjects" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#carouselProjects" data-bs-slide-to="2"></li>
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
