--- a/index.html
+++ b/index.html
@@ -274,13 +274,13 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="2ndyearprojectimage.jpg" alt="First slide">
+                      <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="hackathonprojectimage.jpg" alt="Second slide">
+                      <img class="d-block w-100 img-fluid" src="hackathonprojectimage.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="4thyearprojectimage.png" alt="Third slide">
+                      <img class="d-block w-100 img-fluid" src="4thyearprojectimage.png" alt="Third slide">
                     </div>
                   </div>
                   <a class="carousel-control-prev" data-bs-target="#carouselProjects" role="button" data-bs-slide="prev">
