--- a/index.html
+++ b/index.html
@@ -275,12 +275,24 @@
                   <div class="carousel-inner ratio ratio-16x9">
                     <div class="carousel-item active">
                       <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Ticket Booking System</h5>
+                            <p>Used HTML and Bootstrap to develop a website that would allow users to book tickets for a movie theater</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100 img-fluid" src="hackathonprojectimage.jpg" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Hackathon 2024 TUH</h5>
+                            <p>Worked on solving problems that Tallaght University Hospital had come up with to aid their patients in their daily life</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100 img-fluid" src="4thyearprojectimage.png" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>4th Year Project</h5>
+                            <p>Training a Machine Learning Model to predict whether an image of a skin lesion is cancerous</p>
+                        </div>
                     </div>
                   </div>
                   <a class="carousel-control-prev" data-bs-target="#carouselProjects" role="button" data-bs-slide="prev">
