--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <li data-bs-target="#carouselProjects" data-bs-slide-to="1"></li>
                         <li data-bs-target="#carouselProjects" data-bs-slide-to="2"></li>
                   </ol>
-                  <div class="carousel-inner ratio ratio-16x9 margin-bottom: 50px">
+                  <div class="carousel-inner ratio ratio-16x9 margin-bottom: 50px;">
                     <div class="carousel-item active">
                       <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
                         <div class="text-center p-3">
