--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 </div>
         </section>
-        <section id="experience" style="padding-top: 160px; margin-top: -60px;>
+        <section id="experience" style="padding-top: 160px; margin-top: -60px; margin-bottom: 100px;>
             <h2 class=" mb-4 text-center">Experience</h2>
             <ul>
                 <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
