--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </div>
 </div>
         </section>
-        <section id="experience" style="padding-top: 160px; padding-bottom: 100px; margin-top: -60px; margin-bottom: 100px;>
+        <section id="experience" style="padding-top: 160px; padding-bottom: 100px; margin-top: -60px; margin-bottom: 1000px;>
             <h2 class=" mb-4 text-center">Experience</h2>
             <ul>
                 <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
@@ -272,7 +272,7 @@
                         <li data-bs-target="#carouselProjects" data-bs-slide-to="1"></li>
                         <li data-bs-target="#carouselProjects" data-bs-slide-to="2"></li>
                   </ol>
-                  <div class="carousel-inner ratio ratio-16x9 margin-bottom: 50px;">
+                  <div class="carousel-inner ratio ratio-16x9">
                     <div class="carousel-item active">
                       <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
                         <div class="text-center p-3">
