--- a/index.html
+++ b/index.html
@@ -258,13 +258,13 @@
   </div>
 </div>
         </section>
-        <section id="experience" style="padding-top: 160px; padding-bottom: 100px; margin-top: -60px; margin-bottom: 1000px;>
+        <section id="experience" style="padding-top: 160px; padding-bottom: 100px; margin-top: -60px; margin-bottom: 100px;>
             <h2 class=" mb-4 text-center">Experience</h2>
             <ul>
                 <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
                 <li><strong>Stock Manager</strong>, at Mr.Price January 2024 - Present <br> Managing stock room, stock from Head office and employees as Duty Manager</li>
         </section>
-        <section id="projects" style="padding-top: 160px; margin-top: -60px;>
+        <section id="projects" style="padding-top: 160px; margin-top: -60px; margin-bottom: 500px;">
             <h2 class=" mb-4 text-center">Projects</h2>
             <div id="carouselProjects" class="carousel slide d-flex" data-bs-ride="carousel">
                   <ol class="carousel-indicators">
