--- a/index.html
+++ b/index.html
@@ -275,21 +275,21 @@
                   <div class="carousel-inner ratio ratio-16x9">
                     <div class="carousel-item active">
                       <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
-                        <div class="text-center p-3" style="margin-bottom: 1000px;">
+                        <div class="text-center p-3" style="padding-bottom: 1000px;">
                             <h5 style="color: #000000;">Ticket Booking System</h5>
                             <p style="color: #000000;">Used HTML and Bootstrap to develop a website that would allow users to book tickets for a movie theater</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100 img-fluid" src="hackathonprojectimage.jpg" alt="Second slide">
-                        <div class="text-center p-3" style="margin-bottom: 1000px;">
+                        <div class="text-center p-3" style="padding-bottom: 1000px;">
                             <h5 style="color: #000000;">Hackathon 2024 TUH</h5>
                             <p style="color: #000000;">Worked on solving problems that Tallaght University Hospital had come up with to aid their patients in their daily life</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                       <img class="d-block w-100 img-fluid" src="4thyearprojectimage.png" alt="Third slide">
-                        <div class="text-center p-3" style="margin-bottom: 1000px;">
+                        <div class="text-center p-3" style="padding-bottom: 1000px;">
                             <h5 style="color: #000000;">4th Year Project</h5>
                             <p style="color: #000000;">Training a Machine Learning Model to predict whether an image of a skin lesion is cancerous</p>
                         </div>
