--- a/index.html
+++ b/index.html
@@ -267,17 +267,18 @@
         <section id="projects" style="padding-top: 160px; margin-top: -60px; margin-bottom: 500px;">
             <h2 class=" mb-4 text-center">Projects</h2>
             <div id="carouselProjects" class="carousel slide d-flex" data-bs-ride="carousel">
-                  <ol class="carousel-indicators">
-                        <li data-bs-target="#carouselProjects" data-bs-slide-to="0" class="active"></li>
-                        <li data-bs-target="#carouselProjects" data-bs-slide-to="1"></li>
-                        <li data-bs-target="#carouselProjects" data-bs-slide-to="2"></li>
-                  </ol>
-                  <div class="carousel-inner ratio ratio-16x9">
+                  <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  </div>
+
+                  <div class="carousel-inner">
                     <div class="carousel-item active">
                       <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
-                        <div class="text-center p-3" style="padding-bottom: 1000px;">
-                            <h5 style="color: #000000;">Ticket Booking System</h5>
-                            <p style="color: #000000;">Used HTML and Bootstrap to develop a website that would allow users to book tickets for a movie theater</p>
+                        <div class="text-center p-3">
+                            <h5>Ticket Booking System</h5>
+                            <p>Used HTML and Bootstrap to develop a website that would allow users to book tickets for a movie theater</p>
                         </div>
                     </div>
                     <div class="carousel-item">
