--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
                       <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="2" aria-label="Slide 3"></button>
                   </div>
 
-                  <div class="carousel-inner ratio ratio-16x9">
+                  <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
+                      <img class="d-block w-100 img-fluid object-fit: cover;" src="2ndyearprojectimage.jpg" alt="First slide">
                         <div class="text-center p-3">
                             <h5>Ticket Booking System</h5>
                             <p>Used HTML and Bootstrap to develop a website that would allow users to book tickets for a movie theater</p>
