--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
                   <div class="carousel-inner height: 200px;">
                     <div class="carousel-item active">
-                      <img class="d-block w-100 img-fluid" src="2ndyearprojectimage.jpg" alt="First slide">
+                      <img class="d-block w-100 img-fluid" src="2ndyearprojectimage2.jpg" alt="First slide">
                         <div class="text-center p-3">
                             <h5>Ticket Booking System</h5>
                             <p>Used HTML and Bootstrap to develop a website that would allow users to book tickets for a movie theater</p>
