--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </nav>
     </header>
     <main data-spy="scroll" data-target="#navbar" data-offset="0">
-        <section id="about" style="padding-top: 160px; margin-top: -60px;>
+        <section id="about" style="padding-top: 100px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">About Me</h2>   
             <p>Have experience developing programs using Python, C++, C#, using JavaScript and SQL. Have Language skills in German (C1 Level), French (B1 Level), Irish (H3) and mother-tongue English, as well as customer-facing experience and working as a team as an employee and during projects. IT student with relevant technical and interpersonal skills looking for work placement position. Looking for the opportunity to further develop my skills and to progress through the organisation over time. </p>
             <p>All my socials are linked here and in the Contact Me section</p>
@@ -107,7 +107,7 @@
                 </a>
             </div>
         </section>
-        <section id="education" style="padding-top: 160px; margin-top: -60px;>
+        <section id="education" style="padding-top: 100px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">Education</h2>
             <ul>
                 <li><strong>Degree</strong>, BSC Computing with Data Analysis at Technilogical University Dublin September 2019 - Present <br> </li>
@@ -258,13 +258,13 @@
   </div>
 </div>
         </section>
-        <section id="experience" style="padding-top: 160px; padding-bottom: 100px; margin-top: -60px; margin-bottom: 100px;>
+        <section id="experience" style="padding-top: 100px; padding-bottom: 100px; margin-top: -60px; margin-bottom: 100px;>
             <h2 class=" mb-4 text-center">Experience</h2>
             <ul>
                 <li><strong>Security</strong>, at Frontline Security July 2019 - 2023 <br> Ensuring Customer Satisfaction and Safety</li>
                 <li><strong>Stock Manager</strong>, at Mr.Price January 2024 - Present <br> Managing stock room, stock from Head office and employees as Duty Manager</li>
         </section>
-        <section id="projects" style="padding-top: 160px; margin-top: -60px; margin-bottom: 500px;">
+        <section id="projects" style="padding-top: 100px; margin-top: -60px;">
             <h2 class=" mb-4 text-center">Projects</h2>
             <div id="carouselProjects" class="carousel slide d-flex" data-bs-ride="carousel">
                   <div class="carousel-indicators">
@@ -306,7 +306,7 @@
                   </a>
             </div>
         </section>
-        <section id="skills" style="padding-top: 160px; margin-top: -60px;>
+        <section id="skills" style="padding-top: 100px; margin-top: -60px;>
             <div class="container my-5">
               <h2 class="mb-4 text-center">My Skills</h2>
             
@@ -406,7 +406,7 @@
               </div>
             </div>
         </section>
-        <section id="contactme" style="padding-top: 160px; margin-top: -60px;>
+        <section id="contactme" style="padding-top: 100px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">Contact Me</h2>
             <div class="d-flex justify-content-center align-items-center gap-4 social-links">
                 <a href="https://facebook.com" target="_blank">
