--- a/index.html
+++ b/index.html
@@ -424,6 +424,24 @@
                     <div id="map" style="width: 100%; height: 400px; border-radius: 8px;"></div>
                 </div>
             </div>
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <form>
+                      <div class="mb-3">
+                        <label for="emailSubject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="emailSubject" placeholder="Enter your subject">
+                      </div>
+                      <div class="mb-3">
+                        <label for="emailMessage" class="form-label">Message</label>
+                        <textarea class="form-control" id="emailMessage" rows="5" placeholder="Enter your message"></textarea>
+                      </div>
+                      <div class="d-flex justify-content-end gap-2">
+                        <button type="reset" class="btn btn-secondary">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Send</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
         </section>
         <script>
             
