--- a/index.html
+++ b/index.html
@@ -424,24 +424,47 @@
                     <div id="map" style="width: 100%; height: 400px; border-radius: 8px;"></div>
                 </div>
             </div>
-                <div class="row justify-content-center">
-                  <div class="col-md-6">
-                    <form>
-                      <div class="mb-3">
-                        <label for="emailSubject" class="form-label">Subject</label>
-                        <input type="text" class="form-control" id="emailSubject" placeholder="Enter your subject">
-                      </div>
-                      <div class="mb-3">
-                        <label for="emailMessage" class="form-label">Message</label>
-                        <textarea class="form-control" id="emailMessage" rows="5" placeholder="Enter your message"></textarea>
-                      </div>
-                      <div class="d-flex justify-content-end gap-2">
-                        <button type="reset" class="btn btn-secondary">Cancel</button>
-                        <button type="submit" class="btn btn-primary">Send</button>
-                      </div>
-                    </form>
+
+        <section id="contact" class="py-5">
+          <div class="container text-center">
+            <h2 class="mb-4">Contact Me</h2>
+
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">
+              Email Me
+            </button>
+          </div>
+        </section>
+        
+
+        <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+              <div class="modal-header">
+                <h5 class="modal-title" id="contactModalLabel">Send Me an Email</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="emailSubject" class="form-label">Subject</label>
+                    <input type="text" class="form-control" id="emailSubject" placeholder="Enter your subject">
                   </div>
-                </div>
+                  <div class="mb-3">
+                    <label for="emailMessage" class="form-label">Message</label>
+                    <textarea class="form-control" id="emailMessage" rows="5" placeholder="Enter your message"></textarea>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Send</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
         </section>
         <script>
             
