--- a/index.html
+++ b/index.html
@@ -463,6 +463,22 @@
             </div>
           </div>
         </div>
+        <div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="thankYouModalLabel">Thank You</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body text-center">
+                    <p>Thank you for sending me an email. I will respond promptly.</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 
         </section>
@@ -482,6 +498,16 @@
                 map: map,
             });
         }
+            document.getElementById('sendButton').addEventListener('click', function() {
+
+              var contactModalEl = document.getElementById('contactModal');
+              var contactModal = bootstrap.Modal.getInstance(contactModalEl);
+              contactModal.hide();
+            
+              var thankYouModalEl = document.getElementById('thankYouModal');
+              var thankYouModal = new bootstrap.Modal(thankYouModalEl);
+              thankYouModal.show();
+            });
         </script>
     </main>
 </body>
