--- a/index.html
+++ b/index.html
@@ -498,6 +498,8 @@
                 map: map,
             });
         }
+        </script>
+        <script>
             document.getElementById('sendButton').addEventListener('click', function() {
 
               var contactModalEl = document.getElementById('contactModal');
