--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary">Send</button>
+                <button id="sendButton" type="button" class="btn btn-primary">Send</button>
               </div>
             </div>
           </div>
