--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 </head>
 <body>
     <div class="splash">
-        <div class="splash-text">Thomas Lynch</div>
+        <div class="splash-text">
+            <h1>Thomas Lynch</h1>
+            <h2>BSC Computing with Data Analysis</h2>
+        </div>
     </div>
     <header>
         <a href="#">Thomas Lynch</a>
