--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </header>
     <main data-spy="scroll" data-target="#navbar" data-offset="0">
         <div class="splash">
-            <div class="splash-text">
+            <div class="splash-text text-center">
                 <h1>Thomas Lynch</h1>
                 <h2>BSC Computing with Data Analysis</h2>
             </div>
