--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
         </nav>
     </header>
     <main data-spy="scroll" data-target="#navbar" data-offset="0">
-        <div class="splash">
-            <div class="splash-text" style="text-center">
+        <div class="splash"></div>
+        <div class="splash-text text-center">
                 <h1>Thomas Lynch</h1>
                 <h2>BSC Computing with Data Analysis</h2>
             </div>
-        </div>
         <section id="about" style="padding-top: 100px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">About Me</h2>   
             <p>Have experience developing programs using Python, C++, C#, using JavaScript and SQL. Have Language skills in German (C1 Level), French (B1 Level), Irish (H3) and mother-tongue English, as well as customer-facing experience and working as a team as an employee and during projects. IT student with relevant technical and interpersonal skills looking for work placement position. Looking for the opportunity to further develop my skills and to progress through the organisation over time. </p>
