--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
         ul {
             padding-left: 20px;
         }
+        #dark-mode-toggle {
+            background-color: #008000;
+            color: white; 
+            border: none; 
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+#dark-mode-toggle:hover {
+    background-color: #005500; 
+    transform: scale(1.1);
+}
     </style>
 </head>
 <body>
@@ -97,6 +108,7 @@
                 <h2>BSC Computing with Data Analysis</h2>
             </div>
         </div>
+        <button id="dark-mode-toggle" class="btn btn-outline-secondary position-fixed" style="bottom: 20px; right: 20px; z-index: 1000;"></button>
         <section id="about" style="padding-top: 100px; margin-top: -60px;>
             <h2 class=" mb-4 text-center">About Me</h2>   
             <p>Have experience developing programs using Python, C++, C#, using JavaScript and SQL. Have Language skills in German (C1 Level), French (B1 Level), Irish (H3) and mother-tongue English, as well as customer-facing experience and working as a team as an employee and during projects. IT student with relevant technical and interpersonal skills looking for work placement position. Looking for the opportunity to further develop my skills and to progress through the organisation over time. </p>
@@ -516,6 +528,16 @@
               var thankYouModal = new bootstrap.Modal(thankYouModalEl);
               thankYouModal.show();
             });
+        </script>
+        <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const toggleButton = document.getElementById('dark-mode-toggle');
+            const body = document.body;
+        
+            toggleButton.addEventListener('click', function () {
+                body.classList.toggle('dark-mode');
+            });
+        });
         </script>
     </main>
 </body>
